# daisy-days

./: .gitignore  Cargo.toml  README.md  build.rs  extension.toml  extension.wasm  test_init.txt
mcp-server/: Cargo.toml
mcp-server/src/: main.rs
scripts/: build.ps1  build.sh  justfile
src/: lib.rs  main.rs
