[package]
name = "daisy_days"
version = "0.1.0"
edition = "2021"
authors = ["Ahmad Hamdi"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
once_cell = "1.19"
regex = "1.10"
